fix(all): avoid some warnings